--- a/app/src/main/res/drawable/ink_drop.xml
+++ b/app/src/main/res/drawable/ink_drop.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+    <item android:left="4dp" android:bottom="4dp" android:right="4dp" android:top="4dp">
         <shape android:shape="oval">
-            <solid android:color="@color/colorAccent">
+            <solid android:color="#FFFFFF">
 
             </solid>
-            <stroke android:color="#FFFFFF" android:width="3dp"></stroke>
         </shape>
     </item>
 </layer-list>
