--- a/app/src/main/res/drawable/inksplat_seekbar.xml
+++ b/app/src/main/res/drawable/inksplat_seekbar.xml
@@ -6,26 +6,27 @@
                 android:shape="rectangle" >
                 <size android:height="5dp"/>
                 <corners
-                    android:radius="5dp" />
+                    android:radius="50dp" />
                 <solid android:color="@color/colorPrimaryDark"/>
             </shape>
     </item>
     <item>
         <shape>
             <corners
-                android:radius="5dp" />
+                android:radius="50dp" />
             <gradient
                 android:angle="270"
                 android:startColor="#99000000"
                 android:centerColor="#11000000"
                 android:endColor="#11000000"
-                android:centerY="0.2"
+                android:centerY="1"
                 android:type="linear"
                 />
+            <stroke android:color="#22FFFFFF" android:width="1.5dp"></stroke>
         </shape>
     </item>
     <item android:id="@android:id/progress"
-        android:gravity="center_vertical|fill_horizontal" android:height=".5dp" android:start="2dp">
+        android:gravity="center_vertical|fill_horizontal" android:height="4dp" android:start="4dp">
         <scale android:scaleWidth="100%">
             <selector>
                 <item android:state_enabled="false"
@@ -33,10 +34,11 @@
                 <item>
                     <shape
                         android:shape="rectangle" >
-                        <size android:height="5dp"/>
+                        <size android:height="10dp"/>
                         <corners
-                            android:radius="5dp" />
-                        <solid android:color="@color/colorAccent"></solid>
+                            android:radius="50dp" />
+                        <gradient android:startColor="@color/blueshade1" android:endColor="@color/blueshade2" android:angle="-90"></gradient>
+                        <stroke android:width="1dp" android:color="#22FFFFFF"></stroke>
                     </shape>
                 </item>
             </selector>
