--- a/app/src/main/res/drawable/scroll_knob.xml
+++ b/app/src/main/res/drawable/scroll_knob.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:width="15dp" android:height="15dp">
-        <shape android:shape="rectangle">
-            <gradient android:startColor="#E5E5E5" android:endColor="#FFF" android:angle="-90"></gradient>
-            <corners android:radius="50dp"></corners>
-            <stroke android:color="#FFF" android:width="1.5dp"></stroke>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">\
+    <item android:width="25dp" android:height="25dp">
+        <shape android:shape="oval">
+            <solid android:color="@color/colorPrimary"></solid>
+        </shape>
+    </item>
+
+    <item android:width="25dp" android:height="25dp">
+        <shape android:shape="oval">
+            <stroke android:color="#11FFFFFF" android:width="1dp"></stroke>
         </shape>
     </item>
 </layer-list>
