--- a/app/src/main/res/layout/activity_ink_splat.xml
+++ b/app/src/main/res/layout/activity_ink_splat.xml
@@ -36,10 +36,10 @@
                 <HorizontalScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_above="@+id/paintbrush_forward"
+                    android:layout_alignStart="@+id/paintbrush_forward"
                     android:layout_weight="1"
-                    android:background="@color/colorPrimaryDark"
-                    android:fadingEdgeLength="50dp"
-                    android:requiresFadingEdge="horizontal">
+                    android:background="@color/colorPrimaryDark">
 
                     <LinearLayout
                         android:id="@+id/swatch_list"
@@ -47,16 +47,15 @@
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:paddingLeft="15dp"
-                        android:paddingTop="12dp">
+                        android:paddingTop="13dp">
 
                         <RelativeLayout
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:layout_marginRight="15dp"
                             android:alpha="1"
-                            android:background="@drawable/selected_inkdrop"
-                            android:foreground="@drawable/ink_drop"
-                            android:foregroundTint="@android:color/background_light">
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="#FFFFFF">
 
                         </RelativeLayout>
 
@@ -64,43 +63,154 @@
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:layout_marginRight="15dp"
-                            android:alpha="1"
-                            android:background="@drawable/selected_inkdrop"
-                            android:foreground="@drawable/ink_drop"
-                            android:foregroundTint="@android:color/holo_green_dark">
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/redshade1">
 
                         </RelativeLayout>
 
+                        <RelativeLayout
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="15dp"
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/redshade2">
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="15dp"
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/redshade3">
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginRight="16dp"
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/purpshade1">
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="15dp"
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/purpshade2">
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="15dp"
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/purpshade3">
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="15dp"
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/blueshade1">
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="15dp"
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/blueshade2">
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="15dp"
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/blueshade3">
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="15dp"
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/greenshade1">
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="15dp"
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/greenshade2">
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginRight="15dp"
+                            android:alpha=".3"
+                            android:background="@drawable/ink_drop"
+                            android:backgroundTint="@color/greenshade3">
+
+                        </RelativeLayout>
                     </LinearLayout>
                 </HorizontalScrollView>
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="2.8"
                     android:background="@color/colorPrimary"
-                    android:orientation="horizontal"
-                    android:paddingRight="15dp"
-                    android:paddingTop="10dp">
+                    android:orientation="horizontal">
 
                     <ImageButton
                         android:id="@+id/paint_done"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_alignParentBottom="false"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginTop="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:background="@drawable/tool_ui_btn"
+                        android:backgroundTint="@android:color/holo_green_light"
                         app:srcCompat="@drawable/icon_check" />
 
                     <ImageButton
                         android:id="@+id/cancel_paint"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginRight="40dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:background="@drawable/tool_ui_btn"
+                        android:backgroundTint="@android:color/holo_red_light"
                         app:srcCompat="@drawable/icon_cancel" />
 
                     <ImageButton
@@ -122,7 +232,7 @@
                         android:background="@drawable/tool_ui_btn"
                         android:visibility="gone"
                         app:srcCompat="@drawable/icon_minus" />
-                </RelativeLayout>
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -132,14 +242,14 @@
                 android:layout_height="match_parent"
                 android:layout_weight="10"
                 android:background="@color/colorPrimary"
-                android:orientation="horizontal"
-                android:padding="10dp">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:padding="4dp"
                     app:srcCompat="@drawable/paint_size_icon" />
 
                 <SeekBar
@@ -150,7 +260,7 @@
                     android:layout_marginRight="30dp"
                     android:max="100"
                     android:min="5"
-                    android:padding="12dp"
+                    android:padding="8dp"
                     android:paddingVertical="5dp"
                     android:progress="25"
                     android:progressDrawable="@drawable/inksplat_seekbar"
@@ -161,17 +271,18 @@
                     android:id="@+id/imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="85dp"
-                    android:padding="10dp"
+                    android:layout_marginLeft="50dp"
+                    android:padding="20dp"
                     app:srcCompat="@drawable/paint_size_icon" />
 
                 <ImageButton
                     android:id="@+id/paintbrush_back"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
                     android:alpha=".5"
                     android:background="@drawable/tool_ui_btn"
-                    android:backgroundTint="@color/colorPrimaryDark"
                     app:srcCompat="@drawable/icon_rotate_back" />
 
                 <ImageButton
