--- a/app/src/main/res/drawable/inksplat_seekbar.xml
+++ b/app/src/main/res/drawable/inksplat_seekbar.xml
@@ -37,7 +37,7 @@
                         <size android:height="11dp"/>
                         <corners
                             android:radius="50dp" />
-                        <gradient android:startColor="@color/blueshade1" android:endColor="@color/blueshade2" android:angle="-90"></gradient>
+                        <solid android:color="#FFFFFFFF"></solid>
                         <stroke android:width="1dp" android:color="#22FFFFFF"></stroke>
                     </shape>
                 </item>
