--- a/app/src/main/res/drawable/tool_ui_btn.xml
+++ b/app/src/main/res/drawable/tool_ui_btn.xml
@@ -2,14 +2,21 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark">
+            <solid android:color="#11000000">
 
             </solid>
         </shape>
     </item>
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/buttonTint">
+            <solid android:color="@android:color/transparent">
+
+            </solid>
+        </shape>
+    </item>
+    <item android:state_activated="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/holo_blue_bright">
 
             </solid>
         </shape>
