--- a/app/src/main/res/layout/activity_ink_splat.xml
+++ b/app/src/main/res/layout/activity_ink_splat.xml
@@ -82,18 +82,200 @@
                             android:orientation="horizontal">
 
                             <RelativeLayout
+                                android:id="@+id/inkSwatch"
                                 android:layout_width="70dp"
                                 android:layout_height="match_parent"
                                 android:alpha="1"
-                                android:background="@drawable/swatch_option"
-                                android:padding="20dp">
+                                android:background="@drawable/swatch_option">
 
                                 <RelativeLayout
+                                    android:id="@+id/inkSwatchSplat"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:background="@color/blueshade1">
+                                    android:layout_marginBottom="10dp"
+                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginRight="15dp"
+                                    android:layout_marginTop="10dp"
+                                    android:background="@drawable/splat_icon"
+                                    android:backgroundTint="?attr/colorButtonNormal">
 
                                 </RelativeLayout>
+
+                                <RelativeLayout
+                                    android:id="@+id/inkSwatchArrow"
+                                    android:layout_width="13dp"
+                                    android:layout_height="15dp"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginTop="-6dp"
+                                    android:background="@drawable/triangle_down">
+
+                                </RelativeLayout>
+
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:id="@+id/inkSwatch"
+                                android:layout_width="70dp"
+                                android:layout_height="match_parent"
+                                android:alpha="1"
+                                android:background="@drawable/swatch_option">
+
+                                <RelativeLayout
+                                    android:id="@+id/inkSwatchSplat"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginBottom="10dp"
+                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginRight="15dp"
+                                    android:layout_marginTop="10dp"
+                                    android:background="@drawable/splat_icon"
+                                    android:backgroundTint="@android:color/holo_blue_light">
+
+                                </RelativeLayout>
+
+                                <RelativeLayout
+                                    android:id="@+id/inkSwatchArrow"
+                                    android:layout_width="13dp"
+                                    android:layout_height="15dp"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginTop="-6dp"
+                                    android:background="@drawable/triangle_down"
+                                    android:visibility="invisible">
+
+                                </RelativeLayout>
+
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:id="@+id/inkSwatch"
+                                android:layout_width="70dp"
+                                android:layout_height="match_parent"
+                                android:alpha="1"
+                                android:background="@drawable/swatch_option">
+
+                                <RelativeLayout
+                                    android:id="@+id/inkSwatchSplat"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginBottom="10dp"
+                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginRight="15dp"
+                                    android:layout_marginTop="10dp"
+                                    android:background="@drawable/splat_icon"
+                                    android:backgroundTint="@android:color/holo_green_light">
+
+                                </RelativeLayout>
+
+                                <RelativeLayout
+                                    android:id="@+id/inkSwatchArrow"
+                                    android:layout_width="13dp"
+                                    android:layout_height="15dp"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginTop="-6dp"
+                                    android:background="@drawable/triangle_down"
+                                    android:visibility="invisible">
+
+                                </RelativeLayout>
+
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:id="@+id/inkSwatch"
+                                android:layout_width="70dp"
+                                android:layout_height="match_parent"
+                                android:alpha="1"
+                                android:background="@drawable/swatch_option">
+
+                                <RelativeLayout
+                                    android:id="@+id/inkSwatchSplat"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginBottom="10dp"
+                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginRight="15dp"
+                                    android:layout_marginTop="10dp"
+                                    android:background="@drawable/splat_icon"
+                                    android:backgroundTint="@android:color/holo_orange_dark">
+
+                                </RelativeLayout>
+
+                                <RelativeLayout
+                                    android:id="@+id/inkSwatchArrow"
+                                    android:layout_width="13dp"
+                                    android:layout_height="15dp"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginTop="-6dp"
+                                    android:background="@drawable/triangle_down"
+                                    android:visibility="invisible">
+
+                                </RelativeLayout>
+
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:id="@+id/inkSwatch"
+                                android:layout_width="70dp"
+                                android:layout_height="match_parent"
+                                android:alpha="1"
+                                android:background="@drawable/swatch_option">
+
+                                <RelativeLayout
+                                    android:id="@+id/inkSwatchSplat"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginBottom="10dp"
+                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginRight="15dp"
+                                    android:layout_marginTop="10dp"
+                                    android:background="@drawable/splat_icon"
+                                    android:backgroundTint="@android:color/holo_purple">
+
+                                </RelativeLayout>
+
+                                <RelativeLayout
+                                    android:id="@+id/inkSwatchArrow"
+                                    android:layout_width="13dp"
+                                    android:layout_height="15dp"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginTop="-6dp"
+                                    android:background="@drawable/triangle_down"
+                                    android:visibility="invisible">
+
+                                </RelativeLayout>
+
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:id="@+id/inkSwatch"
+                                android:layout_width="70dp"
+                                android:layout_height="match_parent"
+                                android:alpha="1"
+                                android:background="@drawable/swatch_option">
+
+                                <RelativeLayout
+                                    android:id="@+id/inkSwatchSplat"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginBottom="10dp"
+                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginRight="15dp"
+                                    android:layout_marginTop="10dp"
+                                    android:background="@drawable/splat_icon"
+                                    android:backgroundTint="@android:color/holo_red_light">
+
+                                </RelativeLayout>
+
+                                <RelativeLayout
+                                    android:id="@+id/inkSwatchArrow"
+                                    android:layout_width="13dp"
+                                    android:layout_height="15dp"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginTop="-6dp"
+                                    android:background="@drawable/triangle_down"
+                                    android:visibility="invisible">
+
+                                </RelativeLayout>
+
                             </RelativeLayout>
 
                         </LinearLayout>
@@ -102,40 +284,20 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="2.8"
-                        android:background="@color/colorPrimary"
+                        android:layout_weight="10"
+                        android:background="@android:color/background_light"
                         android:orientation="horizontal"
                         android:visibility="gone">
 
-                        <ImageButton
-                            android:id="@+id/cancel_paint"
-                            android:layout_width="match_parent"
+                        <ImageView
+                            android:id="@+id/EraserModeToggle"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:background="@drawable/tool_ui_btn"
-                            android:backgroundTint="@android:color/holo_red_light"
-                            android:visibility="gone"
-                            app:srcCompat="@drawable/icon_cancel" />
+                            android:alpha=".2"
+                            android:padding="15dp"
+                            app:srcCompat="@drawable/eraser_icon" />
 
-                        <ImageButton
-                            android:id="@+id/brush_size_up"
-                            android:layout_width="32dp"
-                            android:layout_height="32dp"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginRight="50dp"
-                            android:background="@drawable/tool_ui_btn"
-                            android:visibility="gone"
-                            app:srcCompat="@drawable/icon_plus" />
-
-                        <ImageButton
-                            android:id="@+id/brush_size_down"
-                            android:layout_width="32dp"
-                            android:layout_height="32dp"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginRight="10dp"
-                            android:background="@drawable/tool_ui_btn"
-                            android:visibility="gone"
-                            app:srcCompat="@drawable/icon_minus" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -221,16 +383,34 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/icon_check" />
 
-        <ImageButton
-            android:id="@+id/paintbrush_back"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="false"
-            android:layout_alignParentStart="false"
+        <LinearLayout
+            android:id="@+id/go_back_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
             android:layout_centerHorizontal="true"
-            android:alpha="1"
-            android:background="@android:color/transparent"
-            app:srcCompat="@drawable/icon_rotate_back" />
+            android:layout_marginTop="15dp"
+            android:background="@drawable/back_counter"
+            android:paddingRight="10dp">
+
+            <ImageButton
+                android:id="@+id/paintbrush_back"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentBottom="false"
+                android:layout_alignParentStart="false"
+                android:layout_centerHorizontal="true"
+                android:background="@android:color/transparent"
+                app:srcCompat="@drawable/icon_rotate_back" />
+
+            <TextView
+                android:id="@+id/backCounter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="0"
+                android:textColor="@android:color/background_light" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 </android.support.v7.widget.ContentFrameLayout>
